# postgres-wasm-fdw

./: Cargo.toml
wit/: world.wit
