[package]
name = "sheets_fdw" # The name of your wrapper. Must be Postgres compatible.
version = "0.3.0" # The version number.
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = "debuginfo"
lto = true

[dependencies]
wit-bindgen-rt = "0.26.0"
serde_json = "1.0"

[package.metadata.component]
package = "my-company:sheets-fdw" # A namespaced identifier

[package.metadata.component.target]
path = "wit"

[package.metadata.component.target.dependencies]
"supabase:wrappers" = { path = "./supabase-wrappers-wit" }
